--- a/FuelDeliveryApp/FuelDeliveryApp/Views/Home/Contact.cshtml
+++ b/FuelDeliveryApp/FuelDeliveryApp/Views/Home/Contact.cshtml
@@ -2,7 +2,10 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
+@*<h2>@ViewBag.SanyTitle.</h2>*@
 <h3>@ViewBag.Message</h3>
+@*<h3>@ViewBag.TheMessage</h3>*@
+
 
 <address>
     One Microsoft Way<br />
@@ -15,3 +18,8 @@
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<form method="post">
+    <textarea name="message"></textarea>
+    <input type="submit" value="send"/>
+</form>
