--- a/FuelDeliveryMVC/Views/OperatingRegion/Details.cshtml
+++ b/FuelDeliveryMVC/Views/OperatingRegion/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<FuelDeliveryMVC.Models.Customer>
+﻿@using FuelDeliveryMVC.Models
+@model IEnumerable<Customer>
 
 @{
     ViewBag.Title = "Details";
